=== HEAD

* Log the execution times of migrations to the database's loggers (jeremyevans)

* Add a TimestampMigrator that can work with migrations where versions are timestamps, and handle migrations applied out of order (jeremyevans)

* Completely refactor Sequel::Migrator, now a class instead of a module (jeremyevans)

* Save migration version after each migration, instead of after all migrations (jeremyevans)

* Raise an error if missing a migration version (jeremyevans)

* Raise an error if using a duplicate migration version (jeremyevans)

* Add a Sequel.migration DSL for defining migrations (jeremyevans)

* Add a sharding plugin giving Sequel::Model objects support for dealing with sharding (jeremyevans)

* Handle timestamp(N) with time zone data types (hone)

* Fix MSSQL temporary table creation, but watch out as it changes the table name (gpd, jeremyevans) (#299)

=== 3.11.0 (2010-05-03)

* Allow shared postgresql adapter to work with ruby 1.9 with the -Ku switch (golubev.pavel) (#298)

* Add support for connecting to MSSQL via JTDS in the JDBC adapter (jeremyevans)

* Support returning the number of rows updated/deleted on MSSQL when using the ADO adapter with an explicit :provider (jeremyevans)

* Support transactions in the ADO adapter if not using the default :provider (jeremyevans)

* Make Database#disconnect not raise an exception when using the unsharded single connection pool (jeremyevans)

* Attempt to handle JDBC connection problems in cases where driver auto loading doesn't work (e.g. Tomcat) (elskwid)

* Make native MySQL adapter's tinyint to boolean conversion only convert tinyint(1) columns and not larger tinyint columns (roland.swingler) (#294)

* Fix use of limit with distinct on Microsoft SQL Server (jeremyevans) (#297)

* Correctly swallow errors when using :ignore_index_errors in Database#create_table when using unsupported indexes (jeremyevans) (#295)
